--- a/frontend/src/styles/styles.css
+++ b/frontend/src/styles/styles.css
@@ -60,4 +60,29 @@ header nav .plans:hover {
 }
 header nav .plans:hover i {
   color: rgb(0, 101, 255);
+}
+
+.plans-menu {
+  position: absolute;
+  margin: 3rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  justify-content: flex-start;
+  gap: 3rem;
+  background-color: #fff;
+  z-index: 999;
+}
+.plans-menu .card {
+  width: 15rem;
+  height: 10rem;
+  font-weight: 500;
+  font-size: 25px;
+}
+.plans-menu .card a {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }/*# sourceMappingURL=styles.css.map */
