--- a/frontend/src/styles/styles.scss
+++ b/frontend/src/styles/styles.scss
@@ -77,6 +77,29 @@ header {
 	}
 }
 
+.plans-menu {
+	position: absolute;
+	margin: 3rem;
+	@include flexCenter();
+	justify-content: flex-start;
+	gap: 3rem;
+	background-color: #fff;
+	z-index: 999;
+
+	.card {
+		width: 15rem;
+		height: 10rem;
+		font-weight: 500;
+		font-size: 25px;
+
+		a {
+			width: 100%;
+			height: 100%;
+			@include flexCenter();
+		}
+	}
+}
+
 // ===============
 //
 // ===============
