--- a/frontend/src/styles/styles.css
+++ b/frontend/src/styles/styles.css
@@ -1,6 +1,6 @@
 * {
   box-sizing: border-box;
-  font-family: "Roboto", sans-serif;
+  font-family: "Poppins", sans-serif;
   margin: 0;
   padding: 0;
   list-style-type: none;
@@ -26,7 +26,6 @@ header {
   align-items: center;
   justify-content: space-between;
   padding-left: 1rem;
-  border: 1px solid red;
 }
 header .img-container {
   height: 2rem;
@@ -44,7 +43,6 @@ header nav {
   gap: 1.5rem;
   text-transform: capitalize;
   font-weight: 500;
-  letter-spacing: 0.5px;
 }
 header nav a:hover {
   color: rgb(0, 101, 255);
@@ -61,28 +59,21 @@ header nav .plans:hover {
 header nav .plans:hover i {
   color: rgb(0, 101, 255);
 }
-
-.plans-menu {
-  position: absolute;
-  margin: 3rem;
+header .sign-in {
   display: flex;
   justify-content: center;
   align-items: center;
-  justify-content: flex-start;
-  gap: 3rem;
-  background-color: #fff;
-  z-index: 999;
 }
-.plans-menu .card {
-  width: 15rem;
-  height: 10rem;
-  font-weight: 500;
-  font-size: 25px;
-}
-.plans-menu .card a {
-  width: 100%;
-  height: 100%;
+header .login,
+header .sign-up {
+  display: block;
+  padding: 0 1.5rem;
+  height: 4rem;
   display: flex;
   justify-content: center;
   align-items: center;
+}
+header .sign-up {
+  background-color: rgb(0, 101, 255);
+  color: #fff;
 }/*# sourceMappingURL=styles.css.map */
