--- a/frontend/src/styles/styles.scss
+++ b/frontend/src/styles/styles.scss
@@ -10,7 +10,7 @@ $black: rgb(9, 30, 66);
 
 * {
 	box-sizing: border-box;
-	font-family: "Roboto", sans-serif;
+	font-family: "Poppins", sans-serif;
 	margin: 0;
 	padding: 0;
 	list-style-type: none;
@@ -38,7 +38,6 @@ header {
 	@include flexCenter();
 	justify-content: space-between;
 	padding-left: 1rem;
-	border: 1px solid red;
 
 	.img-container {
 		height: 2rem;
@@ -54,7 +53,6 @@ header {
 		gap: 1.5rem;
 		text-transform: capitalize;
 		font-weight: 500;
-		letter-spacing: 0.5px;
 
 		a:hover {
 			color: $light-blue;
@@ -75,28 +73,22 @@ header {
 			}
 		}
 	}
-}
 
-.plans-menu {
-	position: absolute;
-	margin: 3rem;
-	@include flexCenter();
-	justify-content: flex-start;
-	gap: 3rem;
-	background-color: #fff;
-	z-index: 999;
+	.sign-in {
+		@include flexCenter();
+	}
+    
+	.login,
+	.sign-up {
+        display: block;
+		padding: 0 1.5rem;
+		height: 4rem;
+        @include flexCenter();
+	}
 
-	.card {
-		width: 15rem;
-		height: 10rem;
-		font-weight: 500;
-		font-size: 25px;
-
-		a {
-			width: 100%;
-			height: 100%;
-			@include flexCenter();
-		}
+	.sign-up {
+		background-color: $light-blue;
+		color: #fff;
 	}
 }
 
