added gradient background

--- a/frontend/src/styles/styles.css
+++ b/frontend/src/styles/styles.css
@@ -85,6 +85,11 @@ header .sign-up {
   align-items: center;
   padding-left: 4rem;
   gap: 4rem;
+  background: linear-gradient(90deg, rgb(82, 67, 170) 0%, rgb(237, 80, 180) 100%);
+  height: calc(100vh - 4rem);
+}
+.homepage .left * {
+  color: #fff;
 }
 .homepage h1 {
   font-size: 45px;
