--- a/frontend/src/styles/styles.scss
+++ b/frontend/src/styles/styles.scss
@@ -101,8 +101,20 @@ header {
 	grid-template-columns: 1fr 1fr;
 	justify-content: center;
 	align-items: center;
+	// padding: 2rem 4rem;
+	// padding-right: 0;
 	padding-left: 4rem;
 	gap: 4rem;
+	background: linear-gradient(
+		90deg,
+		rgb(82, 67, 170) 0%,
+		rgb(237, 80, 180) 100%
+	);
+	height: calc(100vh - 4rem);
+
+	.left * {
+		color: #fff;
+	}
 
 	h1 {
 		font-size: 45px;
