--- a/frontend/src/styles/styles.scss
+++ b/frontend/src/styles/styles.scss
@@ -18,6 +18,10 @@ $black: rgb(9, 30, 66);
 	color: $black;
 }
 
+body {
+	overflow-x: hidden;
+}
+
 img {
 	width: 100%;
 	height: 100%;
@@ -57,21 +61,6 @@ header {
 		a:hover {
 			color: $light-blue;
 		}
-
-		.plans {
-			cursor: pointer;
-
-			i {
-				margin-left: 0.25rem;
-			}
-
-			&:hover {
-				color: $light-blue;
-				i {
-					color: $light-blue;
-				}
-			}
-		}
 	}
 
 	.sign-in {
@@ -89,6 +78,80 @@ header {
 	.sign-up {
 		background-color: $light-blue;
 		color: #fff;
+	}
+}
+
+@media screen and (max-width: 975px) {
+	header {
+		i {
+			position: absolute;
+			top: 1.5rem;
+			right: 1rem;
+			font-size: 30px;
+			cursor: pointer;
+		}
+
+        .menu {
+            display: none;
+        }
+
+		&.show-menu {
+			flex-direction: column;
+			justify-content: flex-start;
+			align-items: flex-start;
+			height: 100vh;
+			padding: 1rem;
+			gap: 1rem;
+
+            .menu {
+                display: flex;
+            }
+
+			.home-link {
+				padding: 0.5rem 0;
+			}
+
+			.left {
+				flex-direction: column;
+				align-items: flex-start;
+				gap: 0;
+			}
+
+			nav {
+				flex-direction: column;
+				align-items: flex-start;
+				font-weight: 400;
+				// width: 100%;
+				gap: 0;
+				margin-top: 1rem;
+
+				a {
+					display: block;
+					width: calc(100vw - 2rem);
+					padding: 1.25rem 0;
+					border-bottom: 1px solid #c3c3c3;
+					font-size: 18px;
+				}
+
+				.first {
+					border-top: 1px solid #c3c3c3;
+				}
+			}
+
+			.sign-in {
+				flex-direction: column;
+				gap: 1rem;
+				font-size: 18px;
+
+				.login {
+					border: 1px solid $light-blue;
+				}
+
+				* {
+					width: calc(100vw - 2rem);
+				}
+			}
+		}
 	}
 }
 
