added frontend to main app

--- a/landing/templates/login.html
+++ b/landing/templates/login.html
@@ -10,7 +10,7 @@
     <h2>Login</h2>
     
     {% if message %}
-    <div>{{ message }}</div>
+    <p>{{ message }}</p>
     {% endif %}
 
 	<div class="form-group">
