--- a/landing/static/styles.scss
+++ b/landing/static/styles.scss
@@ -6,18 +6,10 @@ body {
 	overflow: hidden;
 }
 
-.form-container {
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	width: 100vw;
-	height: 100vh;
-}
-
-form {
-	width: 500px;
-	// background-color: #0052cc;
-	padding: 4rem;
-    border: 1px solid #c3c3c3;
-    border-radius: 20px;
-}
+// .form-container {
+// 	display: flex;
+// 	justify-content: center;
+// 	align-items: center;
+// 	width: 100vw;
+// 	height: 100vh;
+// }
