--- a/landing/templates/login.html
+++ b/landing/templates/login.html
@@ -1,38 +1,40 @@
 {% extends "layout.html" %} 
 
-{% block title %}Log In{% endblock %}
+{% block title %}Log In{% endblock %} 
 
 {% block form %}
 
-<form action="{% url 'login' %}" method="post">
-    {% csrf_token %}
+<form
+	action="{% url 'login' %}"
+	method="post"
+	class="p-16 flex flex-col justify-center content-center gap-4 text-center bg-white shadow-md"
+>
+	{% csrf_token %}
 
-    <h2>Login</h2>
-    
-    {% if message %}
-    <p>{{ message }}</p>
-    {% endif %}
+	<h2 class="text-2xl font-bold">Login</h2>
 
-	<div class="form-group">
-		<input
-			autofocus
-			class="form-control"
-			type="email"
-			name="email"
-			placeholder="Email"
-		/>
-	</div>
-	<div class="form-group">
-		<input
-			class="form-control"
-			type="password"
-			name="password"
-			placeholder="Password"
-		/>
-	</div>
-	<input class="btn btn-primary" type="submit" value="Login" />
+	{% if message %}
+	<p class="text-red-500">{{ message }}</p>
+	{% endif %}
+
+    <input
+        autofocus
+        type="email"
+        name="email"
+        placeholder="Email"
+        class="border border-stone-300 border-solid px-4 py-2 outline-0 w-72"
+    />
+    <input
+        type="password"
+        name="password"
+        placeholder="Password"
+        class="border border-stone-300 border-solid px-4 py-2 outline-0 w-72"
+    />
+	<input class="bg-blue-500 text-white h-10 font-medium cursor-pointer hover:bg-blue-700" type="submit" value="Login" />
+
+	<p>
+		Don't have an account? <a class="text-blue-400" href="{% url 'signup' %}">Sign up here.</a>
+	</p>
 </form>
-
-Don't have an account? <a href="{% url 'signup' %}">Register here.</a>
 
 {% endblock %}
