--- a/landing/templates/signup.html
+++ b/landing/templates/signup.html
@@ -1,49 +1,46 @@
-{% extends "layout.html" %} {% block title %}Sign Up{% endblock %} {% block form
-%}
+{% extends "layout.html" %} 
+
+{% block title %}Sign Up{% endblock %} 
+
+{% block form %}
 
 <form
-	action="{% url 'login' %}"
+	action="{% url 'signup' %}"
 	method="post"
-	class="absolute top-0 left-0 translate-x-1/2 translate-y-1/2 w-80 h-80 p-16 flex flex-col justify-center content-center gap-4"
+	class="p-16 flex flex-col justify-center content-center gap-4 text-center bg-white shadow-md"
 >
 	{% csrf_token %}
 
-	<h2>Sign Up</h2>
+	<h2 class="text-2xl font-bold">Sign Up</h2>
 
 	{% if message %}
-	<div>{{ message }}</div>
+	<p class="text-red-500">{{ message }}</p>
 	{% endif %}
 
-	<form action="{% url 'register' %}" method="post">
-		{% csrf_token %}
-		<div class="form-group">
-			<input
-				class="form-control"
-				type="email"
-				name="email"
-				placeholder="Email Address"
-			/>
-		</div>
-		<div class="form-group">
-			<input
-				class="form-control"
-				type="password"
-				name="password"
-				placeholder="Password"
-			/>
-		</div>
-		<div class="form-group">
-			<input
-				class="form-control"
-				type="password"
-				name="confirmation"
-				placeholder="Confirm Password"
-			/>
-		</div>
-		<input class="btn btn-primary" type="submit" value="Register" />
-	</form>
+    <input
+        autofocus
+        type="email"
+        name="email"
+        placeholder="Email"
+        class="border border-stone-300 border-solid px-4 py-2 outline-0 w-72"
+    />
+    <input
+        type="password"
+        name="password"
+        placeholder="Password"
+        class="border border-stone-300 border-solid px-4 py-2 outline-0 w-72"
+    />
+    <input
+        type="password"
+        name="confirmation"
+        placeholder="Confirm Password"
+        class="border border-stone-300 border-solid px-4 py-2 outline-0 w-72"
+    />
+	<input class="bg-blue-500 text-white h-10 font-medium cursor-pointer hover:bg-blue-700" type="submit" value="Sign Up" />
 
-	Already have an account? <a href="{% url 'login' %}">Log In here.</a>
-
-	{% endblock %}
+	<p>
+		Already have an account? <a class="text-blue-400" href="{% url 'login' %}">Log in here.</a>
+	</p>
 </form>
+
+{% endblock %}
