integrated google authentication

--- a/landing/templates/layout.html
+++ b/landing/templates/layout.html
@@ -17,6 +17,6 @@
 		<title>{% block title %} {% endblock %}</title>
 	</head>
 	<body>
-		<div class="bg-stone-100 w-screen h-screen relative flex justify-center items-center border">{% block form %}{% endblock %}</div>
+		<div class="bg-stone-100 w-screen min-h-screen p-16 relative flex justify-center items-center border">{% block form %}{% endblock %}</div>
 	</body>
 </html>
