--- a/landing/templates/signup.html
+++ b/landing/templates/signup.html
@@ -27,6 +27,12 @@
 		class="border border-stone-300 border-solid px-4 py-2 outline-0 w-72"
 	/>
 	<input
+		type="text"
+		name="display-name"
+		placeholder="Display Name"
+		class="border border-stone-300 border-solid px-4 py-2 outline-0 w-72"
+	/>
+	<input
 		type="email"
 		name="email"
 		placeholder="Email"
