--- a/landing/templates/signup.html
+++ b/landing/templates/signup.html
@@ -23,15 +23,14 @@
 		<input
 			autofocus
 			type="text"
-			name="firstname"
+			name="first_name"
 			placeholder="First Name"
 			class="border border-stone-300 border-solid px-4 py-2 outline-0 w-1/2"
 		/>
 		<input
-			autofocus
 			type="text"
-			name="lastname"
-			placeholder="Last Name"
+			name="last_name"
+			placeholder="Last Name (optional)"
 			class="border border-stone-300 border-solid px-4 py-2 outline-0 w-1/2"
 		/>
 	</div>
