removed display name field from user model

--- a/main/frontend/src/styles/input.css
+++ b/main/frontend/src/styles/input.css
@@ -1,3 +1,7 @@
 @tailwind base;
 @tailwind components;
-@tailwind utilities;/*# sourceMappingURL=input.css.map */
+@tailwind utilities;
+
+body {
+    overflow-x: hidden;
+}
