changes to vite app

--- a/main/frontend/src/styles/output.css
+++ b/main/frontend/src/styles/output.css
@@ -534,12 +534,24 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
+.relative {
+  position: relative;
+}
+
 .flex {
   display: flex;
 }
 
 .h-12 {
   height: 3rem;
+}
+
+.h-4 {
+  height: 1rem;
+}
+
+.w-full {
+  width: 100%;
 }
 
 .w-screen {
@@ -550,10 +562,29 @@ video {
   align-items: center;
 }
 
+.justify-center {
+  justify-content: center;
+}
+
 .justify-between {
   justify-content: space-between;
 }
 
+.gap-8 {
+  gap: 2rem;
+}
+
+.border {
+  border-width: 1px;
+}
+
+.px-8 {
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
+
 body {
   overflow-x: hidden;
+  /* background: #1D2125; */
+  color: #B6C2CF;
 }
