--- a/main/frontend/src/styles/output.css
+++ b/main/frontend/src/styles/output.css
@@ -538,6 +538,10 @@ video {
   position: relative;
 }
 
+.m-0 {
+  margin: 0px;
+}
+
 .ml-2 {
   margin-left: 0.5rem;
 }
@@ -560,6 +564,10 @@ video {
 
 .h-\[calc\(100vh-4rem\)\] {
   height: calc(100vh - 4rem);
+}
+
+.w-20 {
+  width: 5rem;
 }
 
 .w-8 {
@@ -602,6 +610,10 @@ video {
   gap: 2rem;
 }
 
+.rounded {
+  border-radius: 0.25rem;
+}
+
 .rounded-full {
   border-radius: 9999px;
 }
@@ -637,6 +649,22 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
+.bg-contain {
+  background-size: contain;
+}
+
+.bg-no-repeat {
+  background-repeat: no-repeat;
+}
+
+.p-0 {
+  padding: 0px;
+}
+
+.p-2 {
+  padding: 0.5rem;
+}
+
 .px-4 {
   padding-left: 1rem;
   padding-right: 1rem;
@@ -651,6 +679,11 @@ video {
   font-size: 14px;
 }
 
+.text-inverse-dark {
+  --tw-text-opacity: 1;
+  color: rgb(29 33 37 / var(--tw-text-opacity));
+}
+
 .text-subtle-light {
   --tw-text-opacity: 1;
   color: rgb(68 84 111 / var(--tw-text-opacity));
@@ -660,9 +693,19 @@ video {
   outline-width: 0px;
 }
 
+.grayscale {
+  --tw-grayscale: grayscale(100%);
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+}
+
 .hover\:bg-brand-hover:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(133 184 255 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-subtlest-light:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(98 111 134 / var(--tw-bg-opacity));
 }
 
 :is(.dark .dark\:bg-surface-dark) {
@@ -677,4 +720,9 @@ video {
 :is(.dark .dark\:text-subtle-dark) {
   --tw-text-opacity: 1;
   color: rgb(159 173 188 / var(--tw-text-opacity));
+}
+
+:is(.dark .dark\:hover\:bg-subtlest-dark:hover) {
+  --tw-bg-opacity: 1;
+  background-color: rgb(140 155 171 / var(--tw-bg-opacity));
 }
