--- a/main/frontend/src/styles/output.css
+++ b/main/frontend/src/styles/output.css
@@ -542,16 +542,12 @@ video {
   position: relative;
 }
 
+.-bottom-16 {
+  bottom: -4rem;
+}
+
 .-bottom-8 {
   bottom: -2rem;
-}
-
-.bottom-2 {
-  bottom: 0.5rem;
-}
-
-.left-0 {
-  left: 0px;
 }
 
 .left-1\/2 {
@@ -572,6 +568,10 @@ video {
 
 .hidden {
   display: none;
+}
+
+.h-1 {
+  height: 0.25rem;
 }
 
 .h-12 {
@@ -611,11 +611,6 @@ video {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.translate-x-1\/2 {
-  --tw-translate-x: 50%;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
 .cursor-pointer {
   cursor: pointer;
 }
@@ -636,12 +631,16 @@ video {
   justify-content: space-between;
 }
 
+.gap-2 {
+  gap: 0.5rem;
+}
+
 .gap-4 {
   gap: 1rem;
 }
 
-.gap-6 {
-  gap: 1.5rem;
+.gap-8 {
+  gap: 2rem;
 }
 
 .rounded {
@@ -652,6 +651,10 @@ video {
   border-radius: 9999px;
 }
 
+.rounded-lg {
+  border-radius: 0.5rem;
+}
+
 .border {
   border-width: 1px;
 }
@@ -660,8 +663,8 @@ video {
   border-width: 0px;
 }
 
-.border-b-\[0\.5px\] {
-  border-bottom-width: 0.5px;
+.border-b-\[0\.25px\] {
+  border-bottom-width: 0.25px;
 }
 
 .border-solid {
@@ -673,12 +676,30 @@ video {
   border-color: rgb(159 173 188 / var(--tw-border-opacity));
 }
 
+.border-neutral-light {
+  border-color: #091E420F;
+}
+
 .bg-brand-dark {
   --tw-bg-opacity: 1;
   background-color: rgb(87 157 255 / var(--tw-bg-opacity));
 }
 
+.bg-green-light {
+  --tw-bg-opacity: 1;
+  background-color: rgb(33 110 78 / var(--tw-bg-opacity));
+}
+
+.bg-neutral-light {
+  background-color: #091E420F;
+}
+
 .bg-surface-light {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.bg-surface-overlay-light {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
@@ -699,9 +720,18 @@ video {
   padding: 0px;
 }
 
+.p-12 {
+  padding: 3rem;
+}
+
 .px-2 {
   padding-left: 0.5rem;
   padding-right: 0.5rem;
+}
+
+.px-3 {
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
 }
 
 .px-4 {
@@ -736,9 +766,22 @@ video {
   background-color: #091E420F;
 }
 
+:is(.dark .dark\:border-neutral-dark) {
+  border-color: #A1BDD914;
+}
+
+:is(.dark .dark\:bg-neutral-dark) {
+  background-color: #A1BDD914;
+}
+
 :is(.dark .dark\:bg-surface-dark) {
   --tw-bg-opacity: 1;
   background-color: rgb(29 33 37 / var(--tw-bg-opacity));
+}
+
+:is(.dark .dark\:bg-surface-overlay-dark) {
+  --tw-bg-opacity: 1;
+  background-color: rgb(40 46 51 / var(--tw-bg-opacity));
 }
 
 :is(.dark .dark\:text-subtle-dark) {
