--- a/main/frontend/src/styles/styles.scss
+++ b/main/frontend/src/styles/styles.scss
@@ -21,6 +21,7 @@ $magenta-bolder-light: #50253f;
 $grey-light: #44546f;
 $grey-bolder-light: #091e42;
 $surface-light: #fff;
+$neutral-light: #091e420f;
 
 $text-dark: #b6c2cf;
 $text-disabled-dark: #bfdbf847;
@@ -45,6 +46,7 @@ $magenta-bolder-dark: #fdd0ec;
 $grey-dark: #9fadbc;
 $grey-bolder-dark: #dee4ea;
 $surface-dark: #1d2125;
+$neutral-dark: #a1bdd914;
 
 @mixin flexCenter() {
 	display: flex;
@@ -64,7 +66,7 @@ $surface-dark: #1d2125;
 	padding: 0;
 	box-sizing: border-box;
 	color: $text-light;
-	font-family: sans-serif;
+	font-family: "Roboto", sans-serif;
 }
 
 body {
@@ -84,7 +86,7 @@ body {
 // ===============
 
 .grey-hover:hover {
-	background-color: $grey-light;
+	background-color: $neutral-light;
 }
 
 // ===============
@@ -113,9 +115,9 @@ header {
 				cursor: pointer;
 				border-radius: 5px;
 			}
-            
+
 			div.nav-item {
-                padding: 0 0.75rem;
+				padding: 0 0.75rem;
 				position: relative;
 				i {
 					margin-left: 0.5rem;
