added subtle and subtlest colors

--- a/main/frontend/src/styles/styles.scss
+++ b/main/frontend/src/styles/styles.scss
@@ -20,6 +20,8 @@ $magenta-light: #943d73;
 $magenta-bolder-light: #50253f;
 $grey-light: #44546f;
 $grey-bolder-light: #091e42;
+$subtle-light: #44546F;
+$subtlest-light: #626F86;
 $surface-light: #fff;
 $neutral-light: #091e420f;
 
@@ -45,6 +47,8 @@ $magenta-dark: #f797d2;
 $magenta-bolder-dark: #fdd0ec;
 $grey-dark: #9fadbc;
 $grey-bolder-dark: #dee4ea;
+$subtle-dark: #8C9BAB;
+$subtlest-dark: #9FADBC;
 $surface-dark: #1d2125;
 $neutral-dark: #a1bdd914;
 
