--- a/main/frontend/src/styles/styles.scss
+++ b/main/frontend/src/styles/styles.scss
@@ -20,8 +20,8 @@ $magenta-light: #943d73;
 $magenta-bolder-light: #50253f;
 $grey-light: #44546f;
 $grey-bolder-light: #091e42;
-$subtle-light: #44546F;
-$subtlest-light: #626F86;
+$subtle-light: #44546f;
+$subtlest-light: #626f86;
 $surface-light: #fff;
 $neutral-light: #091e420f;
 
@@ -47,8 +47,8 @@ $magenta-dark: #f797d2;
 $magenta-bolder-dark: #fdd0ec;
 $grey-dark: #9fadbc;
 $grey-bolder-dark: #dee4ea;
-$subtle-dark: #8C9BAB;
-$subtlest-dark: #9FADBC;
+$subtle-dark: #8c9bab;
+$subtlest-dark: #9fadbc;
 $surface-dark: #1d2125;
 $neutral-dark: #a1bdd914;
 
@@ -69,7 +69,7 @@ $neutral-dark: #a1bdd914;
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
-	color: $text-light;
+	color: $subtle-light;
 	font-family: "Roboto", sans-serif;
 }
 
@@ -125,15 +125,21 @@ header {
 				position: relative;
 				i {
 					margin-left: 0.5rem;
+					color: $text-light;
 				}
 			}
 
 			.logo {
-				height: 1rem;
-				width: 4rem;
+				height: 1.5rem;
+				width: 5rem;
 				background-repeat: no-repeat;
 				background-size: contain;
-				background-image: url(../assets/logo-light.png);
+				filter: brightness(50%);
+				background-image: url(../assets/logo-png.png);
+
+				&:hover {
+					background-image: url(../assets/logo-gif.gif);
+				}
 			}
 		}
 
