--- a/main/frontend/src/styles/styles.scss
+++ b/main/frontend/src/styles/styles.scss
@@ -130,14 +130,16 @@ header {
 			}
 
 			.logo {
-                @include flexCenter();
+				@include flexCenter();
 				height: 1.5rem;
 				width: 5rem;
 				background-repeat: no-repeat;
 				background-size: contain;
-                background-position: center;
+				background-position: center;
 				background-image: url(../assets/logo-png.png);
-				filter: brightness(50%);
+				filter: brightness(0) saturate(100%) invert(30%) sepia(53%)
+					saturate(323%) hue-rotate(179deg) brightness(91%)
+					contrast(88%);
 
 				&:hover {
 					background-image: url(../assets/logo-gif.gif);
