--- a/main/frontend/src/styles/styles.scss
+++ b/main/frontend/src/styles/styles.scss
@@ -112,7 +112,7 @@ header {
 	height: 3rem;
 	width: 100%;
 	padding: 0 1rem;
-	border-bottom: 0.5px solid $neutral-light;
+	border-bottom: 0.5px solid $grey-bolder-dark;
 	font-size: 14px;
 
 	nav {
@@ -157,7 +157,12 @@ header {
 		}
 
 		&.right {
-			gap: 1rem;
+			gap: .5rem;
+
+			i {
+				cursor: pointer;
+                border-radius: 50%;
+			}
 
 			.search {
 				@include flexCenter();
@@ -169,6 +174,7 @@ header {
 
 				i {
 					font-size: 12.5px;
+					cursor: default;
 				}
 
 				input {
@@ -176,10 +182,31 @@ header {
 					width: 100%;
 
 					&:focus {
-						width: 680px;
+						width: 650px;
 					}
 				}
 			}
+
+			.fa-bell {
+				background-color: $blue-light;
+				height: 2rem;
+				width: 2rem;
+				color: $surface-light;
+				@include flexCenter();
+                transform: rotate(45deg);
+                font-size: 16px;
+
+				&:hover {
+					background-color: $blue-bolder-light;
+				}
+			}
+
+            .end-icons {
+                font-size: 17px;
+                @include flexCenter();
+                height: 2rem;
+                width: 2rem;
+            }
 		}
 	}
 }
