--- a/main/frontend/src/styles/styles.scss
+++ b/main/frontend/src/styles/styles.scss
@@ -157,11 +157,11 @@ header {
 		}
 
 		&.right {
-			gap: .5rem;
+			gap: 0.5rem;
 
 			i {
 				cursor: pointer;
-                border-radius: 50%;
+				border-radius: 50%;
 			}
 
 			.search {
@@ -193,20 +193,36 @@ header {
 				width: 2rem;
 				color: $surface-light;
 				@include flexCenter();
-                transform: rotate(45deg);
-                font-size: 16px;
+				transform: rotate(45deg);
+				font-size: 16px;
 
 				&:hover {
 					background-color: $blue-bolder-light;
 				}
 			}
 
-            .end-icons {
-                font-size: 17px;
+			.end-icons {
+				font-size: 17px;
+				@include flexCenter();
+				height: 2rem;
+				width: 2rem;
+			}
+
+			.account {
+				height: 2rem;
+				width: 2rem;
+                border-radius: 50%;
                 @include flexCenter();
-                height: 2rem;
-                width: 2rem;
-            }
+
+				i {
+					height: 1.5rem;
+					width: 1.5rem;
+                    background: red;
+                    background-position: center;
+                    background-repeat: no-repeat;
+                    background-size: contain;
+				}
+			}
 		}
 	}
 }
